# obsidian-llm-wiki

./: .deepsource.toml  .env.domestic.example  .gitattributes  .gitignore  .lefthook.yml  .mcp.json  .obc_semantic_cache.pkl  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  HANDOFF.md  README.ja.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ROADMAP.md  TASK10-DRAFT-structure-into-view.md  TASK10C-DRAFT-promote-gesture.md  TASK11-DRAFT-work-driver.md  TASK11-GRILL-BRIEF.md  TASK12-DRAFT-context-core.md  TASK13-DRAFT-recall-revival.md  TASK14-DRAFT-multi-platform-compile.md  TASK7-DRAFT-project-currency.md  TASK8-DRAFT-work-os.md  TASK9-DRAFT-workspace-federation.md  _attack_1_auth.js  _attack_2_protocol.js  _attack_3_path.js  _attack_4_resource.js  _attack_5_data.js  _attack_6_injection.js  _attack_7_concurrency.js  _attack_deep2.js  _attack_deep_vuln.js  _stress_1_connection_storm.js  _stress_2_rapid_fire.js  _stress_3_large_file.js  _stress_4_broadcast_storm.js  (+33 more)
compiler/: __main__.py  _md_parse.py  chunker.py  claudemem_sync.py  compile.py  concept_graph.py  context_core.py  cost_guard.py  currency.py  evaluate.py  extractor.py  forge.py  help_index.py  json_compat.py  kb_meta.py  link_discovery.py  memu_sync.py  meta_ontology.py  ontology.py  plugins.py  project_context.py  project_migration.py  pyproject.toml  scheduler.py  settings_cli.py  settings_platform.py  tasks.py  wal.py  work_budget.py  work_driver.py  work_protocol.py  workspace.py
compiler/connectors/: __init__.py  __main__.py  base.py  chubby.py  gmail.py  hackernews.py  web_search.py  x.py
(+888 files in other folders)
