[project]
name = "vault-mind-compiler"
version = "0.1.0"
description = "Knowledge compiler -- raw notes to structured concept graph"
requires-python = ">=3.11"
license = "GPL-3.0-only"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0", "anthropic>=0.30"]
dev = ["ruff>=0.4", "pytest>=8.0"]

[project.scripts]
kb-meta = "compiler.kb_meta:main"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E501"]
